added the google tab manager

--- a/Back-Pain-and-Its-Treatment-Through-Physiotherapy-at-Mittal-Physiofit-Clinic.html
+++ b/Back-Pain-and-Its-Treatment-Through-Physiotherapy-at-Mittal-Physiofit-Clinic.html
@@ -54,6 +54,16 @@
     <!-- ✅ Preload for Faster Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-25D80F4N48');
+</script>
 </head>
 
 <body class="text-dark">
