--- a/Post-Operative-Physiotherapy-Healing-Beyond-Surgery.html
+++ b/Post-Operative-Physiotherapy-Healing-Beyond-Surgery.html
@@ -54,10 +54,20 @@
     <!-- ✅ Preload for Faster Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body class="text-dark">
-   <header class="bg-white shadow-sm">
+    <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -135,7 +145,7 @@
 
                                         </a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
                                             Exercises
@@ -187,58 +197,83 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <p class="lead text-muted mb-4">Surgery is often the first step toward recovery, but true healing begins afterward. Many patients experience pain, stiffness, weakness, or difficulty in movement following surgery. That’s where post-operative physiotherapy plays a crucial role. At Mittal’s Physiofit Clinic, Jaipur, we help patients regain mobility, strength, and independence after surgical procedures with safe, structured, and personalized rehabilitation programs.</p>
+                    <p class="lead text-muted mb-4">Surgery is often the first step toward recovery, but true healing
+                        begins afterward. Many patients experience pain, stiffness, weakness, or difficulty in movement
+                        following surgery. That’s where post-operative physiotherapy plays a crucial role. At Mittal’s
+                        Physiofit Clinic, Jaipur, we help patients regain mobility, strength, and independence after
+                        surgical procedures with safe, structured, and personalized rehabilitation programs.</p>
 
                     <h2 class="section-title">Why Post-Operative Physiotherapy is Important</h2>
                     <div class="highlight-box">
-                        <p class="mb-4">After surgery, the body undergoes significant changes: muscles may weaken, joints may become stiff, and movements may feel restricted. Without proper physiotherapy, patients risk delayed recovery or long-term complications.</p>
+                        <p class="mb-4">After surgery, the body undergoes significant changes: muscles may weaken,
+                            joints may become stiff, and movements may feel restricted. Without proper physiotherapy,
+                            patients risk delayed recovery or long-term complications.</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-hand-holding-heart me-2 text-teal-600"></i> Reducing post-surgical pain and swelling</li>
-                            <li class="list-group-item"><i class="fas fa-running me-2 text-teal-600"></i> Restoring mobility and flexibility</li>
-                            <li class="list-group-item"><i class="fas fa-dumbbell me-2 text-teal-600"></i> Strengthening weak muscles</li>
-                            <li class="list-group-item"><i class="fas fa-balance-scale me-2 text-teal-600"></i> Improving balance and coordination</li>
-                            <li class="list-group-item"><i class="fas fa-walking me-2 text-teal-600"></i> Enhancing overall functional independence</li>
-                            <li class="list-group-item"><i class="fas fa-shield-alt me-2 text-teal-600"></i> Preventing complications like stiffness, contractures, or re-injury</li>
+                            <li class="list-group-item"><i class="fas fa-hand-holding-heart me-2 text-teal-600"></i>
+                                Reducing post-surgical pain and swelling</li>
+                            <li class="list-group-item"><i class="fas fa-running me-2 text-teal-600"></i> Restoring
+                                mobility and flexibility</li>
+                            <li class="list-group-item"><i class="fas fa-dumbbell me-2 text-teal-600"></i> Strengthening
+                                weak muscles</li>
+                            <li class="list-group-item"><i class="fas fa-balance-scale me-2 text-teal-600"></i>
+                                Improving balance and coordination</li>
+                            <li class="list-group-item"><i class="fas fa-walking me-2 text-teal-600"></i> Enhancing
+                                overall functional independence</li>
+                            <li class="list-group-item"><i class="fas fa-shield-alt me-2 text-teal-600"></i> Preventing
+                                complications like stiffness, contractures, or re-injury</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Common Surgeries That Require Physiotherapy</h2>
                     <div class="highlight-box">
-                        <p class="mb-4">Our expert team at Mittal’s Physiofit provides post-operative care for a wide range of surgeries, including:</p>
+                        <p class="mb-4">Our expert team at Mittal’s Physiofit provides post-operative care for a wide
+                            range of surgeries, including:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-bone me-2 text-teal-600"></i> Orthopedic Surgeries – Joint replacement (hip, knee, shoulder), fracture fixation, ligament reconstruction</li>
-                            <li class="list-group-item"><i class="fas fa-spine me-2 text-teal-600"></i> Spinal Surgeries – Disc surgeries, spinal fusion</li>
-                            <li class="list-group-item"><i class="fas fa-heartbeat me-2 text-teal-600"></i> Cardiac Surgeries – Bypass surgery, valve replacement (cardiac rehab)</li>
-                            <li class="list-group-item"><i class="fas fa-brain me-2 text-teal-600"></i> Neurological Surgeries – Brain or spine procedures</li>
-                            <li class="list-group-item"><i class="fas fa-lungs me-2 text-teal-600"></i> Abdominal Surgeries – Where breathing and mobility may be affected</li>
+                            <li class="list-group-item"><i class="fas fa-bone me-2 text-teal-600"></i> Orthopedic
+                                Surgeries – Joint replacement (hip, knee, shoulder), fracture fixation, ligament
+                                reconstruction</li>
+                            <li class="list-group-item"><i class="fas fa-spine me-2 text-teal-600"></i> Spinal Surgeries
+                                – Disc surgeries, spinal fusion</li>
+                            <li class="list-group-item"><i class="fas fa-heartbeat me-2 text-teal-600"></i> Cardiac
+                                Surgeries – Bypass surgery, valve replacement (cardiac rehab)</li>
+                            <li class="list-group-item"><i class="fas fa-brain me-2 text-teal-600"></i> Neurological
+                                Surgeries – Brain or spine procedures</li>
+                            <li class="list-group-item"><i class="fas fa-lungs me-2 text-teal-600"></i> Abdominal
+                                Surgeries – Where breathing and mobility may be affected</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Our Step-by-Step Rehabilitation Approach</h2>
-                    <p class="mb-4">At Mittal’s Physiofit, every patient receives a customized program based on their surgery type, recovery stage, and individual needs.</p>
+                    <p class="mb-4">At Mittal’s Physiofit, every patient receives a customized program based on their
+                        surgery type, recovery stage, and individual needs.</p>
                     <div class="row row-cols-1 row-cols-md-2 g-4 mb-5">
                         <div class="col">
                             <div class="card h-100 p-3">
                                 <h3 class="fw-semibold text-teal-600">1. Initial Phase (Pain & Swelling Control)</h3>
-                                <p>Gentle exercises to improve circulation, breathing exercises for lung expansion, and use of cold/heat therapy and electrotherapy for pain relief.</p>
+                                <p>Gentle exercises to improve circulation, breathing exercises for lung expansion, and
+                                    use of cold/heat therapy and electrotherapy for pain relief.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 p-3">
                                 <h3 class="fw-semibold text-teal-600">2. Intermediate Phase (Mobility & Strength)</h3>
-                                <p>Safe range-of-motion exercises, gradual strengthening of muscles, and balance and coordination training.</p>
+                                <p>Safe range-of-motion exercises, gradual strengthening of muscles, and balance and
+                                    coordination training.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 p-3">
                                 <h3 class="fw-semibold text-teal-600">3. Advanced Phase (Functional Independence)</h3>
-                                <p>Gait training for walking confidence, postural correction exercises, and functional training for daily activities (climbing stairs, sitting-to-standing, lifting safely).</p>
+                                <p>Gait training for walking confidence, postural correction exercises, and functional
+                                    training for daily activities (climbing stairs, sitting-to-standing, lifting
+                                    safely).</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 p-3">
                                 <h3 class="fw-semibold text-teal-600">4. Maintenance & Prevention</h3>
-                                <p>Long-term home exercise program, lifestyle and ergonomic guidance, and regular monitoring to prevent relapse.</p>
+                                <p>Long-term home exercise program, lifestyle and ergonomic guidance, and regular
+                                    monitoring to prevent relapse.</p>
                             </div>
                         </div>
                     </div>
@@ -246,16 +281,23 @@
                     <h2 class="section-title">Why Choose Mittal’s Physiofit for Post-Operative Care?</h2>
                     <div class="highlight-box">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-user-md me-2 text-teal-600"></i> Experienced physiotherapists trained in advanced rehab techniques</li>
-                            <li class="list-group-item"><i class="fas fa-clipboard-list me-2 text-teal-600"></i> Individualized treatment plans</li>
-                            <li class="list-group-item"><i class="fas fa-tools me-2 text-teal-600"></i> Modern equipment and evidence-based therapy</li>
-                            <li class="list-group-item"><i class="fas fa-heart me-2 text-teal-600"></i> Focus on holistic recovery—body and mind</li>
-                            <li class="list-group-item"><i class="fas fa-smile me-2 text-teal-600"></i> Supportive environment that motivates healing</li>
+                            <li class="list-group-item"><i class="fas fa-user-md me-2 text-teal-600"></i> Experienced
+                                physiotherapists trained in advanced rehab techniques</li>
+                            <li class="list-group-item"><i class="fas fa-clipboard-list me-2 text-teal-600"></i>
+                                Individualized treatment plans</li>
+                            <li class="list-group-item"><i class="fas fa-tools me-2 text-teal-600"></i> Modern equipment
+                                and evidence-based therapy</li>
+                            <li class="list-group-item"><i class="fas fa-heart me-2 text-teal-600"></i> Focus on
+                                holistic recovery—body and mind</li>
+                            <li class="list-group-item"><i class="fas fa-smile me-2 text-teal-600"></i> Supportive
+                                environment that motivates healing</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Final Words</h2>
-                    <p class="mb-4">Surgery is just the beginning. The real journey toward complete recovery continues with post-operative physiotherapy. At Mittal’s Physiofit Clinic, Jaipur, we are committed to helping you heal safely, regain confidence, and return to your normal lifestyle faster.</p>
+                    <p class="mb-4">Surgery is just the beginning. The real journey toward complete recovery continues
+                        with post-operative physiotherapy. At Mittal’s Physiofit Clinic, Jaipur, we are committed to
+                        helping you heal safely, regain confidence, and return to your normal lifestyle faster.</p>
                     <p class="text-center mb-5">
                         <a href="/" class="cta-button">✨ Book Your Appointment Today</a>
                     </p>
@@ -263,7 +305,7 @@
             </div>
         </article>
     </main>
-     <footer class="bg-dark text-white">
+    <footer class="bg-dark text-white">
         <div class="container py-5">
             <div class="row gy-4">
                 <div class="col-md-3">
@@ -292,7 +334,8 @@
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
