--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
     <!-- ✅ Preload for Faster Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body class="bg-light">
@@ -1642,17 +1651,18 @@
 
 
                     <div class="col-md-4">
-                        <a href="prenatal-and-postnatal-exercises.html" class="d-flex"
-                            style="text-decoration: none;">
+                        <a href="prenatal-and-postnatal-exercises.html" class="d-flex" style="text-decoration: none;">
                             <div class="card shadow-sm h-100">
                                 <img alt="Physiotherapy can help patient recover from COVID-19" class="card-img-top"
                                     src="./assets/image/services/PhysiotherapyClinic.webp"
                                     style="height: 200px; object-fit: cover;" />
                                 <div class="card-body">
-                                    <h3 class="card-title fw-semibold fs-5 mb-2">Prenatal and Postnatal Exercises from pregnancy to postpartum recovery
-                                        
+                                    <h3 class="card-title fw-semibold fs-5 mb-2">Prenatal and Postnatal Exercises from
+                                        pregnancy to postpartum recovery
+
                                         ...</h3>
-                                    <p class="card-text text-muted small">Motherhood is one of life’s most beautiful journeys, but it also brings many physical and emotional changes.</p>
+                                    <p class="card-text text-muted small">Motherhood is one of life’s most beautiful
+                                        journeys, but it also brings many physical and emotional changes.</p>
                                 </div>
                             </div>
                         </a>
@@ -1832,14 +1842,18 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html"><i
+                                    class="fas fa-angle-right me-2"></i>Home</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html"><i
+                                    class="fas fa-angle-right me-2"></i>About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#Services">Services</a>
+                            <a class="nav-link" href="index.html#Services"><i
+                                    class="fas fa-angle-right me-2"></i>Services</a>
                         </li>
                         <li class="nav-item mt-2">
-                            <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
+                            <a class="nav-link" href="index.html#Contact-us"><i
+                                    class="fas fa-angle-right me-2"></i>Contact Us</a>
                         </li>
 
                     </ul>
@@ -1847,10 +1861,14 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Home Care</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Corporate</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
+                                    class="fas fa-angle-right me-2"></i>Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                                    class="fas fa-angle-right me-2"></i>Upcoming Workshop</a>
                         </li>
                     </ul>
                 </div>
