--- a/physiotherapy-after-knee-replacement-surgery.html
+++ b/physiotherapy-after-knee-replacement-surgery.html
@@ -54,10 +54,20 @@
     <!-- ✅ Preload for Faster Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body class="text-dark">
-   <header class="bg-white shadow-sm">
+    <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -135,7 +145,7 @@
 
                                         </a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
                                             Exercises
@@ -282,7 +292,7 @@
             </div>
         </article>
     </main>
-     <footer class="bg-dark text-white">
+    <footer class="bg-dark text-white">
         <div class="container py-5">
             <div class="row gy-4">
                 <div class="col-md-3">
@@ -311,7 +321,8 @@
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
