--- a/prenatal-and-postnatal-exercises.html
+++ b/prenatal-and-postnatal-exercises.html
@@ -54,6 +54,16 @@
     <!-- Preload for Faster Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body class="text-dark">
@@ -177,68 +187,102 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <p class="lead text-muted mb-4">Motherhood is a transformative journey filled with physical and emotional changes. At Mittal’s Physiofit Clinic, Jaipur, we support mothers through pregnancy and postpartum recovery with safe, expert-guided prenatal and postnatal exercise programs. Our goal is to make this journey smoother, healthier, and more joyful.</p>
+                    <p class="lead text-muted mb-4">Motherhood is a transformative journey filled with physical and
+                        emotional changes. At Mittal’s Physiofit Clinic, Jaipur, we support mothers through pregnancy
+                        and postpartum recovery with safe, expert-guided prenatal and postnatal exercise programs. Our
+                        goal is to make this journey smoother, healthier, and more joyful.</p>
 
                     <h2 class="section-title">Why Prenatal Exercises Matter</h2>
                     <div class="highlight-box">
-                        <p class="mb-4">Exercising during pregnancy, when done under professional supervision, is safe and offers numerous benefits to prepare your body for labor and motherhood.</p>
+                        <p class="mb-4">Exercising during pregnancy, when done under professional supervision, is safe
+                            and offers numerous benefits to prepare your body for labor and motherhood.</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-hand-holding-heart me-2 text-teal-600"></i> Reduces back pain and improves posture</li>
-                            <li class="list-group-item"><i class="fas fa-running me-2 text-teal-600"></i> Enhances stamina for labor and delivery</li>
-                            <li class="list-group-item"><i class="fas fa-weight me-2 text-teal-600"></i> Supports healthy weight gain</li>
-                            <li class="list-group-item"><i class="fas fa-bed me-2 text-teal-600"></i> Improves sleep and reduces stress</li>
-                            <li class="list-group-item"><i class="fas fa-shield-alt me-2 text-teal-600"></i> Lowers the risk of gestational diabetes and hypertension</li>
+                            <li class="list-group-item"><i class="fas fa-hand-holding-heart me-2 text-teal-600"></i>
+                                Reduces back pain and improves posture</li>
+                            <li class="list-group-item"><i class="fas fa-running me-2 text-teal-600"></i> Enhances
+                                stamina for labor and delivery</li>
+                            <li class="list-group-item"><i class="fas fa-weight me-2 text-teal-600"></i> Supports
+                                healthy weight gain</li>
+                            <li class="list-group-item"><i class="fas fa-bed me-2 text-teal-600"></i> Improves sleep and
+                                reduces stress</li>
+                            <li class="list-group-item"><i class="fas fa-shield-alt me-2 text-teal-600"></i> Lowers the
+                                risk of gestational diabetes and hypertension</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Safe Prenatal Exercises at Mittal’s Physiofit</h2>
                     <div class="highlight-box">
-                        <p class="mb-4">Our prenatal exercise programs are tailored to each mother’s trimester, health condition, and comfort level, ensuring safety and effectiveness.</p>
+                        <p class="mb-4">Our prenatal exercise programs are tailored to each mother’s trimester, health
+                            condition, and comfort level, ensuring safety and effectiveness.</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-walking me-2 text-teal-600"></i> Walking & Gentle Cardio – Keeps you active without strain</li>
-                            <li class="list-group-item"><i class="fas fa-spa me-2 text-teal-600"></i> Prenatal Yoga & Breathing Techniques – Enhances flexibility and calms the mind</li>
-                            <li class="list-group-item"><i class="fas fa-dumbbell me-2 text-teal-600"></i> Pelvic Tilts & Core Strengthening – Supports back and abdominal muscles</li>
-                            <li class="list-group-item"><i class="fas fa-swimmer me-2 text-teal-600"></i> Swimming (if advised) – Relieves joint pressure and promotes fitness</li>
-                            <li class="list-group-item"><i class="fas fa-female me-2 text-teal-600"></i> Kegel Exercises – Strengthens pelvic floor for easier labor</li>
+                            <li class="list-group-item"><i class="fas fa-walking me-2 text-teal-600"></i> Walking &
+                                Gentle Cardio – Keeps you active without strain</li>
+                            <li class="list-group-item"><i class="fas fa-spa me-2 text-teal-600"></i> Prenatal Yoga &
+                                Breathing Techniques – Enhances flexibility and calms the mind</li>
+                            <li class="list-group-item"><i class="fas fa-dumbbell me-2 text-teal-600"></i> Pelvic Tilts
+                                & Core Strengthening – Supports back and abdominal muscles</li>
+                            <li class="list-group-item"><i class="fas fa-swimmer me-2 text-teal-600"></i> Swimming (if
+                                advised) – Relieves joint pressure and promotes fitness</li>
+                            <li class="list-group-item"><i class="fas fa-female me-2 text-teal-600"></i> Kegel Exercises
+                                – Strengthens pelvic floor for easier labor</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Postnatal Exercises for Recovery</h2>
                     <div class="highlight-box">
-                        <p class="mb-4">Postpartum recovery requires gentle rehabilitation to rebuild strength and confidence. Our postnatal programs begin after medical clearance, typically 6 weeks post-delivery (longer for C-sections).</p>
+                        <p class="mb-4">Postpartum recovery requires gentle rehabilitation to rebuild strength and
+                            confidence. Our postnatal programs begin after medical clearance, typically 6 weeks
+                            post-delivery (longer for C-sections).</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-walking me-2 text-teal-600"></i> Walking – Gradually builds stamina</li>
-                            <li class="list-group-item"><i class="fas fa-female me-2 text-teal-600"></i> Pelvic Floor (Kegels) – Prevents incontinence and strengthens core</li>
-                            <li class="list-group-item"><i class="fas fa-dumbbell me-2 text-teal-600"></i> Abdominal Bracing & Gentle Core Workouts – Restores posture and back strength</li>
-                            <li class="list-group-item"><i class="fas fa-spa me-2 text-teal-600"></i> Yoga & Stretching – Relieves stiffness and promotes relaxation</li>
-                            <li class="list-group-item"><i class="fas fa-baby me-2 text-teal-600"></i> Mother-Baby Workouts – Encourages bonding through simple movements</li>
+                            <li class="list-group-item"><i class="fas fa-walking me-2 text-teal-600"></i> Walking –
+                                Gradually builds stamina</li>
+                            <li class="list-group-item"><i class="fas fa-female me-2 text-teal-600"></i> Pelvic Floor
+                                (Kegels) – Prevents incontinence and strengthens core</li>
+                            <li class="list-group-item"><i class="fas fa-dumbbell me-2 text-teal-600"></i> Abdominal
+                                Bracing & Gentle Core Workouts – Restores posture and back strength</li>
+                            <li class="list-group-item"><i class="fas fa-spa me-2 text-teal-600"></i> Yoga & Stretching
+                                – Relieves stiffness and promotes relaxation</li>
+                            <li class="list-group-item"><i class="fas fa-baby me-2 text-teal-600"></i> Mother-Baby
+                                Workouts – Encourages bonding through simple movements</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Safety First at Mittal’s Physiofit</h2>
                     <div class="highlight-box">
-                        <p class="mb-4">Your safety is our priority. Our prenatal and postnatal programs are designed with care and precision to ensure a healthy motherhood journey.</p>
+                        <p class="mb-4">Your safety is our priority. Our prenatal and postnatal programs are designed
+                            with care and precision to ensure a healthy motherhood journey.</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-stethoscope me-2 text-teal-600"></i> Detailed assessments before starting any program</li>
-                            <li class="list-group-item"><i class="fas fa-user-md me-2 text-teal-600"></i> Supervision by trained physiotherapists</li>
-                            <li class="list-group-item"><i class="fas fa-heartbeat me-2 text-teal-600"></i> Continuous monitoring of comfort and progress</li>
-                            <li class="list-group-item"><i class="fas fa-exclamation-triangle me-2 text-teal-600"></i> Strict checks for red flags like dizziness, pain, or bleeding</li>
+                            <li class="list-group-item"><i class="fas fa-stethoscope me-2 text-teal-600"></i> Detailed
+                                assessments before starting any program</li>
+                            <li class="list-group-item"><i class="fas fa-user-md me-2 text-teal-600"></i> Supervision by
+                                trained physiotherapists</li>
+                            <li class="list-group-item"><i class="fas fa-heartbeat me-2 text-teal-600"></i> Continuous
+                                monitoring of comfort and progress</li>
+                            <li class="list-group-item"><i class="fas fa-exclamation-triangle me-2 text-teal-600"></i>
+                                Strict checks for red flags like dizziness, pain, or bleeding</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Why Choose Mittal’s Physiofit Clinic?</h2>
                     <div class="highlight-box">
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><i class="fas fa-user-md me-2 text-teal-600"></i> Experienced physiotherapists specializing in maternal care</li>
-                            <li class="list-group-item"><i class="fas fa-clipboard-list me-2 text-teal-600"></i> Customized exercise plans for every stage of motherhood</li>
-                            <li class="list-group-item"><i class="fas fa-lungs me-2 text-teal-600"></i> Guidance on posture, breathing, and lifestyle</li>
-                            <li class="list-group-item"><i class="fas fa-heart me-2 text-teal-600"></i> Holistic approach focusing on physical and emotional well-being</li>
-                            <li class="list-group-item"><i class="fas fa-smile me-2 text-teal-600"></i> Supportive environment to empower mothers</li>
+                            <li class="list-group-item"><i class="fas fa-user-md me-2 text-teal-600"></i> Experienced
+                                physiotherapists specializing in maternal care</li>
+                            <li class="list-group-item"><i class="fas fa-clipboard-list me-2 text-teal-600"></i>
+                                Customized exercise plans for every stage of motherhood</li>
+                            <li class="list-group-item"><i class="fas fa-lungs me-2 text-teal-600"></i> Guidance on
+                                posture, breathing, and lifestyle</li>
+                            <li class="list-group-item"><i class="fas fa-heart me-2 text-teal-600"></i> Holistic
+                                approach focusing on physical and emotional well-being</li>
+                            <li class="list-group-item"><i class="fas fa-smile me-2 text-teal-600"></i> Supportive
+                                environment to empower mothers</li>
                         </ul>
                     </div>
 
                     <h2 class="section-title">Final Words</h2>
-                    <p class="mb-4">Motherhood is a beautiful journey, and at Mittal’s Physiofit Clinic, Jaipur, we are here to support you every step of the way. Our prenatal and postnatal exercise programs are designed to help you stay strong, confident, and healthy throughout pregnancy and beyond.</p>
+                    <p class="mb-4">Motherhood is a beautiful journey, and at Mittal’s Physiofit Clinic, Jaipur, we are
+                        here to support you every step of the way. Our prenatal and postnatal exercise programs are
+                        designed to help you stay strong, confident, and healthy throughout pregnancy and beyond.</p>
                     <p class="text-center mb-5">
                         <a href="bookappoitment.html" class="cta-button">✨ Book Your Appointment Today</a>
                     </p>
@@ -275,7 +319,8 @@
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
