--- a/bookappoitment.html
+++ b/bookappoitment.html
@@ -54,6 +54,16 @@
     <!-- ✅ Preload for Faster Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body class="text-dark">
@@ -302,14 +312,18 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html"><i
+                                    class="fas fa-angle-right me-2"></i>Home</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html"><i
+                                    class="fas fa-angle-right me-2"></i>About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#Services">Services</a>
+                            <a class="nav-link" href="index.html#Services"><i
+                                    class="fas fa-angle-right me-2"></i>Services</a>
                         </li>
                         <li class="nav-item mt-2">
-                            <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
+                            <a class="nav-link" href="index.html#Contact-us"><i
+                                    class="fas fa-angle-right me-2"></i>Contact Us</a>
                         </li>
 
                     </ul>
@@ -317,10 +331,14 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Home Care</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Corporate</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
+                                    class="fas fa-angle-right me-2"></i>Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                                    class="fas fa-angle-right me-2"></i>Upcoming Workshop</a>
                         </li>
                     </ul>
                 </div>
