--- a/gallery.html
+++ b/gallery.html
@@ -111,6 +111,16 @@
             }
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body>
@@ -208,7 +218,8 @@
             <h1 class="display-4 fw-bold text-dark">Gallery</h1>
             <nav aria-label="breadcrumb" class="mt-3">
                 <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-primary text-decoration-none" href="index.html">Home</a>
+                    </li>
                     <li class="breadcrumb-item active" aria-current="page">Gallery</li>
                 </ol>
             </nav>
@@ -421,19 +432,27 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#Services">Services</a></li>
-                        <li class="nav-item mt-2"><a class="nav-link" href="index.html#Contact-us">Contact Us</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html"><i
+                                    class="fas fa-angle-right me-2"></i>Home</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html"><i
+                                    class="fas fa-angle-right me-2"></i>About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html#Services"><i
+                                    class="fas fa-angle-right me-2"></i>Services</a></li>
+                        <li class="nav-item mt-2"><a class="nav-link" href="index.html#Contact-us"><i
+                                    class="fas fa-angle-right me-2"></i>Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Home Care</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Corporate</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
+                                    class="fas fa-angle-right me-2"></i>Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                                    class="fas fa-angle-right me-2"></i>Upcoming Workshop</a>
                         </li>
                     </ul>
                 </div>
